Fix visual bug with Footer not aligning with top border, and some locale ponctuation.

--- a/gb-portfolio/src/components/content/contact/Contact.css
+++ b/gb-portfolio/src/components/content/contact/Contact.css
@@ -22,7 +22,3 @@
     text-transform: uppercase;
     color: var(--pop-color);
 }
-
-.contact-fun-fact-text {
-    margin-bottom: 2rem;
-}
