--- a/gb-portfolio/src/components/footer/Footer.css
+++ b/gb-portfolio/src/components/footer/Footer.css
@@ -1,4 +1,5 @@
 .footer-container {
+    border-top: 3rem solid var(--secondary-color);
     color: var(--primary-color);
     background-color: var(--secondary-color);
 }
